# whose_pic

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  deps.py  main.py  security.py
backend/app/db/: client.py  sql.py
backend/app/routers/: faces.py  health.py  images.py  labels.py
backend/app/services/: face_engine.py  images.py  labels.py  search.py  storage.py
backend/scripts/: download_models.py
db/: README.md
db/migrations/: 0001_users.sql  0002_app.sql  0003_functions.sql
frontend/: middleware.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(app)/gallery/: page.tsx
frontend/src/app/(app)/image/[id]/: page.tsx
frontend/src/app/(app)/people/: page.tsx
frontend/src/app/(app)/people/[id]/: page.tsx
frontend/src/app/(app)/upload/: page.tsx
frontend/src/app/api/token/: route.ts
frontend/src/app/login/: page.tsx
frontend/src/components/: BBoxOverlay.tsx  LabelPicker.tsx  SignOutButton.tsx  SuggestionStrip.tsx  Uploader.tsx
frontend/src/lib/: api.ts  auth.ts  types.ts
