[project]
name = "whosepic-backend"
version = "0.1.0"
description = "WhosePic FastAPI backend: face detection, embeddings, search."
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
